--- a/public/css/battle-board.less
+++ b/public/css/battle-board.less
@@ -9,6 +9,11 @@
 // Other styles
 // ------------
 
+@font-face {
+	font-family: BlueStone;
+	src: url('./font/BlueStone.ttf');
+}
+
 .main-container {
   	margin-left: 20px;
   	margin-right: 20px;	
@@ -49,24 +54,171 @@ input[type="file"] {
     line-height: 23px;
 }
 
-.scores .teams {
-   overflow: hidden;
-   margin: 20px 0;
-   padding-left: 55px;
+.score-top {
+	display:block; 
+	position: relative; 
+	margin:auto;
+	text-align: center;
+	span {
+		color: #e61329;
+		font-size: 18px;
+		font-family: BlueStone;
+	}
 }
- 
- .scores .teams li {
-   display: block;
-   width: 96px;
-   height: 96px;
-   margin: 10px;
-   float: left;
-   border: 16px solid rgba(0,0,0,0.2);
-   -webkit-border-radius: 8px;
-   -moz-border-radius: 8px;
-   border-radius: 8px;
+
+.score-border {
+	margin-top: 20px;
+	padding: 5px;
+	border: 1px solid #ccc;
+  	-webkit-border-radius: 14px; 
+            border-radius: 14px; 
+
+  	-moz-background-clip: padding; 
+  	-webkit-background-clip: padding-box; 
+  	        background-clip: padding-box;
+  	-webkit-box-shadow: 0px 0px 4px 0px #ffffff; 
+            box-shadow: 0px 0px 4px 0px #ffffff;  
+}
+
+// Score animation
+// ---------------
+
+.scores .teams {
+	overflow: hidden;
+	margin: 20px 0;
+	padding-left: 10px;
+   	li {
+		display: block;
+   		margin: 10px;
+   		float: left;   		
+   }
 }
  
  .scores .new {
-   display: none;
+	display: none;
+}
+
+
+strong {
+    font-size: 25px;
+    font-weight: bold;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+}
+
+.wrap {
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    border-radius: 8px;
+    -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+    display: -moz-inline-box;
+    -moz-box-orient: vertical;
+    display: inline-block;
+    background: #f6f6f6;
+    border: 1px solid #CCC;
+    margin: 20px auto;
+    position: relative;
+    padding: 10px 10px 10px;
+    width: 190px;
+}
+
+.wrap span.team-name {
+	display: inline-block;
+  	width: 130px;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	font-weight: bold;
+	padding-top: 10px;
+}
+
+.wrap span.vert-flag {
+	padding-left: 5px;
+}
+
+.wrap img {
+    position: top;
+    
+}
+
+.noise {
+    position: relative;
+    z-index: 1;
+}
+        
+.noise:before, .body-noise:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top:0;
+    bottom:0;
+    left:1px;
+    right:0;
+    background-image: url('../img/score-bg.png');
+}
+
+.vert-flag {
+    -webkit-box-shadow: 1px 0 1px 
+    rgba(0, 0, 0, 0.35);
+    -moz-box-shadow: 1px 0 1px rgba(0, 0, 0, 0.35);
+    box-shadow: 1px 0 1px 
+    rgba(0, 0, 0, 0.35);
+    background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #E72929), color-stop(100%, #6B0C0C));
+    background-image: -webkit-linear-gradient(#E72929, #6B0C0C);
+    background-image: -moz-linear-gradient(#E72929, #6B0C0C);
+    background-image: -o-linear-gradient(    #E72929, #6B0C0C);
+    background-image: -ms-linear-gradient(#E72929, #6B0C0C);
+    background-image: linear-gradient(#E72929, #6B0C0C);
+    display: -moz-inline-box;
+    -moz-box-orient: vertical;
+    display: inline-block;
+    vertical-align: middle;
+    text-align: center;
+    width: 50px;
+    position: absolute;
+    padding-bottom: 35px;
+    top: -1px;
+    padding-top: 10px;
+    left: 10px;
+    color: white;
+}
+
+.vert-flag::before {
+    content: '';
+    display: block;
+    border-style: solid;
+    border-width: 28px;
+    border-color: transparent;
+    left: 0;
+    border-bottom-color: #f6f6f6;
+    position: absolute;
+    bottom: -1px;
+}
+
+p{ 
+    margin-top: 15px;
+    text-align: justify;
+}
+
+#pointed {
+    position: relative;
+    margin: 0 auto;
+    width: 200px;
+    height: 100px;
+    background-color: white;
+}
+#pointed:after,
+#pointed::after {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -50%;
+    content: '';
+    width: 0;
+    height: 0;
+    border-top: solid 100px red;
+    border-left: solid 100px transparent;
+    border-right: solid 100px transparent;
 }
