--- a/views/layout.html
+++ b/views/layout.html
@@ -12,7 +12,7 @@
   <div class="main-container container-fluid">
 	
 	<div class="row-fluid">
-		<a href="/"><img src="/img/battle-board-mini-1.png" alt="Battle Board" /></a>
+		<a href="/"><img src="/img/battle-board-mini.png" alt="Battle Board" /></a>
 		{{> menu}}
 	</div>
 	
