Cleanup battle router

--- a/views/battle/view.html
+++ b/views/battle/view.html
@@ -9,7 +9,7 @@
 		<div class="span12 score-border ">
 			<div class="row">
 				<div class="span6">
-					<img class="score-logo" src="/img/battle-board-medium.png" alt="Battle Board" /><br />
+					<a href="/"><img class="score-logo" src="/img/battle-board-medium.png" alt="Battle Board" /></a><br />
 				</div>
 				<div class="span4">
 					<div class="timer"></div>			
@@ -18,8 +18,6 @@
 					<span>"{{division1.label}}" VS "{{division2.label}}"</span> 
 				</div>
 			</div>
-
-
 			
 			<div class="scores">
 				<ul id="all" class="teams all"></ul>
