Validation server-side Helpers pour Handlebars Mise a jour des equipes Selection dynamiques des joueurs en fonction de la division Gestion d'erreurs Api REST

--- a/public/css/battle-board.less
+++ b/public/css/battle-board.less
@@ -19,11 +19,8 @@
   	margin-right: 20px;	
 }
 
-.mini-layout {
-	border: 1px solid @tableBorder;
-  	.border-radius(@baseBorderRadius);
-  	.box-shadow(0 1px 3px rgba(0,0,0,.055));
-  	padding: 20px;
+.alert li {
+	margin-left: 15px;
 }
 
 .menu {
