--- a/views/admin/team/list.html
+++ b/views/admin/team/list.html
@@ -4,7 +4,7 @@
 			{{#if teams}}
 				{{#each teams}}
 	  			<li>
-	 				<a style="text-align: center;" class="thumbnail plain" href="/admin/team/view/{{id}}">
+	 				<a style="text-align: center;" class="thumbnail plain" href="/admin/team/edit/{{id}}">
 	    				<img width="50" class="team-logo" src="/photos/{{logo}}" />	    				
 	    				<h5>{{name}}</h5>
 	    				<br clear="both" />
