--- a/views/login.html
+++ b/views/login.html
@@ -10,13 +10,13 @@
 		<div class="control-group">
 			<label class="control-label" for="user[login]"> Login : </label>
 			<div class="controls">
-				<input type="text" name="user[login]" />
+				<input type="text" name="user[login]" required />
 			</div>
 			<br />
 			
 			<label class="control-label" for="user[password]"> Mot de passe :</label>
 			<div class="controls">
-				<input type="password" name="user[password]" />
+				<input type="password" name="user[password]" required />
 			</div>
 			<br />
 			
