--- a/public/css/battle-board.css
+++ b/public/css/battle-board.css
@@ -5123,15 +5123,8 @@ a.badge:hover {
   margin-left: 20px;
   margin-right: 20px;
 }
-.mini-layout {
-  border: 1px solid #dddddd;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
-  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
-  padding: 20px;
+.alert li {
+  margin-left: 15px;
 }
 .menu {
   float: right;
