--- a/views/partials/scripts.html
+++ b/views/partials/scripts.html
@@ -1,2 +1,4 @@
 <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
 <script src="/libs/underscore/underscore-min.js"></script>
+<script src="/libs/underscore/underscore-min.js"></script>
+<script src="/js/battle-board.js" defer></script>
