--- a/views/admin/battle/add.html
+++ b/views/admin/battle/add.html
@@ -19,7 +19,7 @@
 			
 			<label class="control-label" for="duree"> Durée (minutes) :</label>
 			<div class="controls">
-				<input type="text" name="duree" value="90" />
+				<input type="text" name="duree" value="90" required />
 			</div>
 			
 			<br />
