--- a/views/admin/battle/list.html
+++ b/views/admin/battle/list.html
@@ -5,7 +5,8 @@
 				{{#each battles}}
 	  			<li>
 	 				<a style="text-align: center;" class="thumbnail plain" href="/battle/{{id}}">
-						{{label}} <br />						
+						{{label}} <br />	
+						{{date}}					
 					</a>
 	  			</li>
 	  			{{/each}}
