--- a/views/layout.html
+++ b/views/layout.html
@@ -11,7 +11,7 @@
  
   <div class="main-container container-fluid">
 	
-	<div class="row-fluid">
+	<div class="menu row-fluid">
 		<a href="/"><img src="/img/battle-board-mini.png" alt="Battle Board" /></a>
 		{{> menu}}
 	</div>
