--- a/public/css/battle-board.less
+++ b/public/css/battle-board.less
@@ -34,6 +34,7 @@
 .team-logo {
 	position: relative;
 	float: right;
+	width: 50px;
 }
 
 .accueil {
@@ -44,6 +45,11 @@
 
 .row {
 	margin-left: 0;
+}
+
+.nav, .battle-list, li.battle-list {
+	margin-left: 20px;
+	margin-right: 20px;
 }
 
 input[type="file"] {
@@ -116,6 +122,10 @@ input[type="file"] {
 	width: 450px;
 	float: right;
 	text-align: left;
+}
+
+.modal-body {
+	text-align: center;
 }
 
 strong {
