--- a/views/admin/battle/score.html
+++ b/views/admin/battle/score.html
@@ -17,10 +17,13 @@
 			
 			<label class="control-label" for="score"> Points :</label>
 			<div class="controls">
-				<input type="text" name="score" value="0" />
-			</div>			
+				<input type="text" name="score" required/>
+			</div>
+			<br />
+			
 			<input type="hidden" name="_method" value="PUT" />
 			<br />
+			
 			<div class="form-actions">
 				<input type="submit" class="btn btn-primary" value="Valider" />&nbsp;
 				<a class="btn" href="/battle/{{battle.id}}">Retour au tableau de bord</a>&nbsp;           
