--- a/views/battle/view.html
+++ b/views/battle/view.html
@@ -27,14 +27,14 @@
 			{{#if user}}
 				<div class="form-actions">
 					<a class="btn btn-primary" href="/admin/battle/score/{{battle.id}}">Gérer les scores</a>&nbsp;
-					<a class="btn" href="/admin/battle/delete/{{battle.id}}">Supprimer</a>
+					<a class="btn" id="delete" href="#" data-url="/admin/battle/delete/{{battle.id}}" data-toggle="modal" data-target="#confirm">Supprimer</a>
 				</div>
 			{{/if}}
 
 		</div>
 	</div>
   </div>
-
+  {{renderConfirmBox "confirm" "delete"}}
 </body>
 
 {{> scripts}}
