--- a/views/admin/player/list.html
+++ b/views/admin/player/list.html
@@ -14,5 +14,10 @@
   				La liste des membres est vide.
   			{{/if}}
 		</ul>
+		
+		<br />
+		<div class="form-actions">
+            <a href="/admin/player/add" class="btn btn-primary">Nouveau joueur</a>
+        </div>			
 	</div>
 </div>
