Add HTML5 audio events

--- a/views/battle/view.html
+++ b/views/battle/view.html
@@ -74,6 +74,7 @@
 <script src="/libs/quicksand/jquery-css-transform.js"></script>
 <script src="/libs/quicksand/jquery-animate-css-rotate-scale.js"></script>
 <script src="/libs/quicksand/jquery.quicksand.js"></script>
+<script src="/libs/buzz/buzz.js"></script>
 <script src="/js/battle-board.js" defer></script>
 
 <script>
