Add player photo Refactor upload images Refactor done attribute for battles

--- a/public/css/battle-board.less
+++ b/public/css/battle-board.less
@@ -37,6 +37,21 @@
 	width: 50px;
 }
 
+.player-photo {
+	position: relative;
+	float: right;
+	width: 50px;
+	height: 50px;
+}
+
+.wrap p img {
+	position: relative;
+	float: left;
+	width: 25px;
+	height: 25px;
+	margin-right: 5px;
+}
+
 .accueil {
 	hr {
 		margin: 20px;
