--- a/public/css/battle-board.css
+++ b/public/css/battle-board.css
@@ -5138,6 +5138,19 @@ a.badge:hover {
   float: right;
   width: 50px;
 }
+.player-photo {
+  position: relative;
+  float: right;
+  width: 50px;
+  height: 50px;
+}
+.wrap p img {
+  position: relative;
+  float: left;
+  width: 25px;
+  height: 25px;
+  margin-right: 5px;
+}
 .accueil hr {
   margin: 20px;
 }
