--- a/views/admin/player/edit.html
+++ b/views/admin/player/edit.html
@@ -1,4 +1,5 @@
 <div class="form-horizontal">
+	<img alt="" class="team-logo" src="/photos/{{player.photo}}">
 	<form method="post" enctype="multipart/form-data">
 		<div class="control-group">
 			<label class="control-label" for="name"> Nom :</label>
