--- a/views/battle/view.html
+++ b/views/battle/view.html
@@ -52,7 +52,10 @@
 		<span class="team-name"><%- team.name %></span>
 		<br clear="both" />
 		<p>
-			<!-- List of players -->        	
+			<!-- List of players -->
+			<% _.each(team.members, function(member){ %>
+				<img class="player-photo" src="/photos/<%- member.photo %>">
+			<% }); %>
    		</p> 
 	</div>
 	</li>
