Secure team remove

--- a/views/admin/team/edit.html
+++ b/views/admin/team/edit.html
@@ -34,7 +34,7 @@
 			<br />
 			<div class="form-actions">
 				<input type="submit" class="btn btn-primary" value="Enregistrer" />
-	            <a href="#" id="delete" data-url="/admin/team/delete/{{current._id}}" class="btn" data-toggle="modal" data-target="#confirm">Supprimer</a>
+	            <a href="#delete" id="delete" data-url="/admin/team/delete/{{current._id}}" class="btn" data-toggle="modal" data-target="#confirm">Supprimer</a>
 	        </div>			
 		</div>		
 	</form>
