--- a/public/css/battle-board.less
+++ b/public/css/battle-board.less
@@ -103,6 +103,11 @@ input[type="file"] {
             box-shadow: 0px 0px 4px 0px #ffffff;  
 }
 
+.alarm-board {
+	background-color: red;
+	opacity: 0.5;
+}
+
 // Score animation
 // ---------------
 
