--- a/views/battle/view.html
+++ b/views/battle/view.html
@@ -6,7 +6,7 @@
   <div class="span12>
 	<div class="row">
 	
-		<div class="span12 score-border ">
+		<div id="board" class="span12 score-border ">
 			<div class="row">
 				<div class="span6">
 					<a href="/"><img class="score-logo" src="/img/battle-board-medium.png" alt="Battle Board" /></a><br />
@@ -73,6 +73,7 @@
 </script>
 
 <script src="/socket.io/socket.io.js"></script>
+<script src="/libs/jquery/jquery-ui-1.10.0.custom.min.js"></script>
 <script src="/libs/quicksand/jquery.easing.1.3.js"></script>
 <script src="/libs/quicksand/jquery-css-transform.js"></script>
 <script src="/libs/quicksand/jquery-animate-css-rotate-scale.js"></script>
