--- a/public/css/battle-board.less
+++ b/public/css/battle-board.less
@@ -166,12 +166,19 @@ strong {
     display: -moz-inline-box;
     -moz-box-orient: vertical;
     display: inline-block;
-    background: #f6f6f6;
     border: 1px solid #CCC;
     margin-top: 20px;
     position: relative;
     padding: 10px 10px 10px;
     width: 190px;
+}
+
+.division0 {
+	background: #f6f6f6;	
+}
+
+.division1 {
+	background: pink;	
 }
 
 .wrap span.team-name {
@@ -242,9 +249,16 @@ strong {
     border-width: 28px;
     border-color: transparent;
     left: 0;
-    border-bottom-color: #f6f6f6;
     position: absolute;
     bottom: -1px;
+}
+
+.division0 .vert-flag::before {
+	border-bottom-color: #f6f6f6;
+}
+
+.division1 .vert-flag::before {
+	border-bottom-color: pink;
 }
 
 p{ 
