Add scores history

--- a/views/admin/battle/score.html
+++ b/views/admin/battle/score.html
@@ -34,6 +34,7 @@
 			<div class="form-actions">
 				<input type="submit" class="btn btn-primary" value="Valider" />&nbsp;
 				<a class="btn" href="/battle/{{battle.id}}">Retour au tableau de bord</a>&nbsp;           
+				<a class="btn" href="/admin/battle/histo/{{battle.id}}">Historique des scores</a>&nbsp;
 	        </div>			
 		</div>		
 	</form>
