--- a/public/css/battle-board.less
+++ b/public/css/battle-board.less
@@ -108,6 +108,16 @@ input[type="file"] {
 	opacity: 0.5;
 }
 
+.players-list .thumbnails > li {
+	height: 100px;
+	width: 200px;
+}
+
+.teams-list .thumbnails > li {
+	height: 250px;
+	width: 200px;
+}
+
 // Score animation
 // ---------------
 
@@ -183,7 +193,7 @@ strong {
 
 .wrap span.team-name {
 	display: inline-block;
-  	width: 130px;
+  	width: 180px;
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 14px;
 	font-weight: bold;
