--- a/views/admin/team/list.html
+++ b/views/admin/team/list.html
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-	<div id="content" class="span12>">
+	<div id="content" class="span12 teams-list">
 		<ul class="thumbnails">
 			{{#if teams}}
 				{{#each teams}}
