--- a/views/admin/player/list.html
+++ b/views/admin/player/list.html
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-	<div id="content" class="span12>">
+	<div id="content" class="span12 players-list">
 		<ul class="thumbnails">
 			{{#if players}}
 				{{#each players}}
