Mise a jour dependances

--- a/public/css/battle-board.css
+++ b/public/css/battle-board.css
@@ -5198,6 +5198,14 @@ input[type="file"] {
   background-color: red;
   opacity: 0.5;
 }
+.players-list .thumbnails > li {
+  height: 100px;
+  width: 200px;
+}
+.teams-list .thumbnails > li {
+  height: 250px;
+  width: 200px;
+}
 .scores .teams {
   overflow: hidden;
   margin: 20px 0;
@@ -5260,7 +5268,7 @@ strong {
 }
 .wrap span.team-name {
   display: inline-block;
-  width: 130px;
+  width: 180px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   font-weight: bold;
